--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,7 +2,7 @@
 @import "_normalize";
 
 $minWidth: 320px;
-$contentWidth: 1438;
+$contentWidth: 1440;
 $media1: $contentWidth + 30;
 $media2: 992.98;
 $media3: 767.98;
@@ -10,7 +10,7 @@ $media4: 479.98;
 
 .wrapper {
    width: 100%;
-   min-height: 100%;
+   min-height: 100vh;
    overflow: hidden;
    display: flex;
    flex-direction: column;
@@ -38,4 +38,164 @@ $media4: 479.98;
 
 main {
    flex: 1 1 auto;
+}
+
+.first-screen {
+   min-height: 100vh;
+   position: relative;
+
+   &__body {
+      width: 100%;
+      height: 100vh;
+      padding-bottom: 60px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      position: relative;
+
+      &::before {
+         content: "";
+         display: block;
+         position: absolute;
+         height: 100vh;
+         width: 100%;
+         top: 0;
+         left: 64%;
+         z-index: -10;
+         background-color: #272727;
+      }
+   }
+
+   &__collection {
+      width: 42%;
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      transform: translateY(-50%);
+   }
+
+   &__title {
+      font-family: "Forum";
+      font-weight: 400;
+      font-size: 64px;
+      line-height: 1.1;
+      letter-spacing: 0.03em;
+      color: #272727;
+
+      margin-bottom: 50px;
+   }
+
+   &__subtitle {
+      font-family: "Segoe UI";
+      font-style: italic;
+      font-weight: 300;
+      font-size: 18px;
+      line-height: 1.3;
+      color: #272727;
+
+      align-self: flex-end;
+      position: relative;
+
+      &::before {
+         content: "";
+         display: inline-block;
+         position: absolute;
+         width: 130px;
+         height: 1px;
+         top: 60%;
+         right: 120%;
+         background-color: #272727;
+      }
+   }
+
+   &__offer-img {
+      position: absolute;
+      top: 50%;
+      left: 64%;
+      transform: translate(-47%, -50%);
+      max-width: 322px;
+      max-height: 170px;
+      object-fit: cover;
+   }
+
+   &__column {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+   }
+
+   &__offer {
+      text-align: right;
+   }
+}
+
+.language {
+   font-family: "Futura PT";
+   font-style: normal;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.3;
+   letter-spacing: 0.05em;
+   text-transform: uppercase;
+
+   a:not(:last-child) {
+      margin-right: 7px;
+   }
+
+   a {
+      color: #c4c4c4;
+   }
+   a.active {
+      color: #272727;
+   }
+}
+
+.offer {
+   & > *:not(:last-child) {
+      margin-bottom: 9px;
+   }
+
+   &__name {
+      font-family: "Futura PT";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.3;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+      color: #272727;
+   }
+
+   &_white &__name {
+      color: #ffffff;
+   }
+
+   &__description {
+      font-family: "Futura PT";
+      font-style: normal;
+      font-weight: 300;
+      font-size: 18px;
+      line-height: 1.3;
+      color: #757575;
+   }
+
+   &_white &__description {
+      color: #c2c2c2;
+   }
+
+   &__price {
+      font-family: "Segoe UI";
+      font-style: italic;
+      font-weight: 300;
+      font-size: 18px;
+      line-height: 1.3;
+      letter-spacing: 0.03em;
+      color: #e2b67a;
+   }
+
+   &_white &__price {
+      color: #efc58b;
+   }
 }
