--- a/css/styles.css
+++ b/css/styles.css
@@ -110,22 +110,6 @@ select {
   width: 100%;
   height: 100%;
 }
-@media (max-width: 1470px) {
-  .container {
-    max-width: 970px;
-  }
-}
-@media (max-width: 992.98px) {
-  .container {
-    max-width: 750px;
-  }
-}
-@media (max-width: 767.98px) {
-  .container {
-    max-width: none;
-    padding: 0 10px;
-  }
-}
 
 .header {
   height: 173px;
@@ -208,18 +192,23 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  position: relative;
 }
 .first-screen__body::before {
   content: "";
   display: block;
   position: absolute;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   top: 0;
   left: 64%;
   z-index: -10;
   background-color: #272727;
+}
+@media (max-width: 767.98px) {
+  .first-screen__body::before {
+    top: 50%;
+    left: 0;
+  }
 }
 .first-screen__collection {
   width: 42%;
@@ -229,31 +218,56 @@ main {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
+  overflow: hidden;
+}
+@media (max-width: 767.98px) {
+  .first-screen__collection {
+    top: 20%;
+    width: 100%;
+  }
 }
 .first-screen__title {
   font-family: "Forum";
   font-weight: 400;
-  font-size: 64px;
   line-height: 1.1;
   letter-spacing: 0.03em;
   color: #272727;
-  margin-bottom: 50px;
+  margin-bottom: 10%;
+}
+@media (max-width: 767px) {
+  .first-screen__title {
+    font-size: calc(48px + 27.2 * ((100vw - 320px) / 1440));
+  }
+}
+@media (min-width: 767px) {
+  .first-screen__title {
+    font-size: calc(48px + 16 * (100vw / 1440));
+  }
 }
 .first-screen__subtitle {
   font-family: "Segoe UI";
   font-style: italic;
   font-weight: 300;
-  font-size: 18px;
   line-height: 1.3;
   color: #272727;
   align-self: flex-end;
   position: relative;
 }
+@media (max-width: 767px) {
+  .first-screen__subtitle {
+    font-size: calc(14px + 6.8 * ((100vw - 320px) / 1440));
+  }
+}
+@media (min-width: 767px) {
+  .first-screen__subtitle {
+    font-size: calc(14px + 4 * (100vw / 1440));
+  }
+}
 .first-screen__subtitle::before {
   content: "";
   display: inline-block;
   position: absolute;
-  width: 130px;
+  width: 70%;
   height: 1px;
   top: 60%;
   right: 120%;
@@ -268,6 +282,12 @@ main {
   max-height: 170px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+@media (max-width: 767.98px) {
+  .first-screen__offer-img {
+    top: 50%;
+    left: 50%;
+  }
 }
 .first-screen__column {
   display: flex;
