--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,10 +3,21 @@
 
 $minWidth: 320px;
 $contentWidth: 1440;
-$media1: $contentWidth + 30;
+$media1: 1170;
 $media2: 992.98;
 $media3: 767.98;
 $media4: 479.98;
+
+@mixin adaptiv-font($pcSize, $mobSize) {
+   $addSize: $pcSize - $mobSize;
+   $addMobSize: $addSize * 1.7;
+   @media (max-width: 767px){
+      font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$contentWidth}));
+   }
+   @media (min-width: 767px){
+      font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$contentWidth}));
+   }
+}
 
 .wrapper {
    width: 100%;
@@ -22,16 +33,16 @@ $media4: 479.98;
    padding: 0 11%;
    width: 100%;
    height: 100%;
-   @media (max-width: $media1 + px) {
-      max-width: 970px;
-   }
-   @media (max-width: $media2 + px) {
-      max-width: 750px;
-   }
-   @media (max-width: $media3 + px) {
-      max-width: none;
-      padding: 0 10px;
-   }
+   // @media (max-width: $media1 + px) {
+   //    max-width: 970px;
+   // }
+   // @media (max-width: $media2 + px) {
+   //    max-width: 750px;
+   // }
+   // @media (max-width: $media3 + px) {
+   //    max-width: none;
+   //    padding: 0 10px;
+   // }
 }
 
 @import "_header";
@@ -51,19 +62,25 @@ main {
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      position: relative;
+      // position: relative;
 
       &::before {
          content: "";
          display: block;
          position: absolute;
          height: 100vh;
-         width: 100%;
+         width: 100vw;
          top: 0;
          left: 64%;
          z-index: -10;
          background-color: #272727;
+
+         @media (max-width: $media3 + px) {
+            top: 50%;
+            left: 0;
+         }
       }
+      
    }
 
    &__collection {
@@ -74,24 +91,32 @@ main {
       top: 50%;
       left: 0;
       transform: translateY(-50%);
+      overflow: hidden;
+
+      @media (max-width: $media3 + px) {
+         top: 20%;
+         width: 100%;
+      }
    }
 
    &__title {
       font-family: "Forum";
       font-weight: 400;
-      font-size: 64px;
+      @include adaptiv-font (64, 48);
+      // font-size: 64px;
       line-height: 1.1;
       letter-spacing: 0.03em;
       color: #272727;
 
-      margin-bottom: 50px;
+      margin-bottom: 10%;
    }
 
    &__subtitle {
       font-family: "Segoe UI";
       font-style: italic;
       font-weight: 300;
-      font-size: 18px;
+      // font-size: 18px;
+      @include adaptiv-font (18, 14);
       line-height: 1.3;
       color: #272727;
 
@@ -102,7 +127,7 @@ main {
          content: "";
          display: inline-block;
          position: absolute;
-         width: 130px;
+         width: 70%;
          height: 1px;
          top: 60%;
          right: 120%;
@@ -118,6 +143,11 @@ main {
       max-width: 322px;
       max-height: 170px;
       object-fit: cover;
+
+      @media (max-width: $media3 + px) {
+         top: 50%;
+         left: 50%;
+      }
    }
 
    &__column {
