--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,8 @@
+@use "sass:math";
 @import "_fonts";
 @import "_normalize";
 
-$minWidth: 320px;
+$minWidth: 320;
 $contentWidth: 1440;
 $media1: 1170;
 $media2: 992.98;
@@ -9,13 +10,17 @@ $media3: 767.98;
 $media4: 479.98;
 
 @mixin adaptiv-font($pcSize, $mobSize) {
-   $addSize: $pcSize - $mobSize;
-   $addMobSize: $addSize * 1.7;
-   @media (max-width: 767px){
-      font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$contentWidth}));
+   $coeff: math.div($pcSize - $mobSize, $contentWidth - $minWidth);
+   $startValue: $mobSize - $coeff * $minWidth;
+
+   font-size: $pcSize + px;
+
+   @media (max-width: $contentWidth + px) {
+      font-size: calc(#{$coeff} * 100vw + #{$startValue + px});
    }
-   @media (min-width: 767px){
-      font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$contentWidth}));
+
+   @media (max-width: $minWidth + px) {
+      font-size: $mobSize + px;
    }
 }
 
@@ -39,10 +44,10 @@ $media4: 479.98;
    // @media (max-width: $media2 + px) {
    //    max-width: 750px;
    // }
-   // @media (max-width: $media3 + px) {
-   //    max-width: none;
-   //    padding: 0 10px;
-   // }
+   @media (max-width: $media3 + px) {
+      max-width: none;
+      padding: 0 5%;
+   }
 }
 
 @import "_header";
@@ -52,23 +57,30 @@ main {
 }
 
 .first-screen {
-   min-height: 100vh;
    position: relative;
 
    &__body {
       width: 100%;
-      height: 100vh;
+      height: 100vmin;
       padding-bottom: 60px;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      // position: relative;
+      position: relative;
+
+      @media (max-width: $media3 + px) {
+         height: 120vmin;
+      }
+
+      @media (max-width: $media4 + px) {
+         padding-bottom: 20px;
+      }
 
       &::before {
          content: "";
          display: block;
          position: absolute;
-         height: 100vh;
+         height: 100vmin;
          width: 100vw;
          top: 0;
          left: 64%;
@@ -76,14 +88,15 @@ main {
          background-color: #272727;
 
          @media (max-width: $media3 + px) {
-            top: 50%;
-            left: 0;
+            top: 60%;
+            left: 50%;
+            height: 50%;
+            transform: translateX(-50%);
          }
       }
-      
    }
 
-   &__collection {
+   .collection {
       width: 42%;
       display: flex;
       flex-direction: column;
@@ -94,44 +107,66 @@ main {
       overflow: hidden;
 
       @media (max-width: $media3 + px) {
-         top: 20%;
-         width: 100%;
+         top: 30%;
+         width: auto;
+         max-width: 475px;
       }
-   }
 
-   &__title {
-      font-family: "Forum";
-      font-weight: 400;
-      @include adaptiv-font (64, 48);
-      // font-size: 64px;
-      line-height: 1.1;
-      letter-spacing: 0.03em;
-      color: #272727;
+      &__title {
+         font-family: "Forum";
+         font-weight: 400;
+         @include adaptiv-font(64, 36);
+         line-height: 1.1;
+         letter-spacing: 0.03em;
+         color: #272727;
 
-      margin-bottom: 10%;
-   }
+         margin-bottom: 0.8em;
 
-   &__subtitle {
-      font-family: "Segoe UI";
-      font-style: italic;
-      font-weight: 300;
-      // font-size: 18px;
-      @include adaptiv-font (18, 14);
-      line-height: 1.3;
-      color: #272727;
+         @media (max-width: $media4 + px) {
+            margin-bottom: 15px;
+         }
+      }
 
-      align-self: flex-end;
-      position: relative;
+      &__subtitle {
+         font-family: "Segoe UI";
+         font-style: italic;
+         font-weight: 300;
+         @include adaptiv-font(18, 14);
+         line-height: 1.3;
+         color: #272727;
 
-      &::before {
-         content: "";
-         display: inline-block;
-         position: absolute;
-         width: 70%;
-         height: 1px;
-         top: 60%;
-         right: 120%;
-         background-color: #272727;
+         align-self: flex-end;
+         position: relative;
+
+         &::before {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            width: 70%;
+            height: 1px;
+            top: 60%;
+            right: 120%;
+            background-color: #272727;
+         }
+      }
+
+      @keyframes HoverGradient {
+         0% {
+            background-position: 0% 50%;
+         }
+
+         100% {
+            background-position: 100% 50%;
+         }
+      }
+
+      &:hover * {
+         background: linear-gradient(90deg, #272727, #efc58b 10%, #e2b67a 20%, #272727 50%);
+         background-size: 200% 200%;
+         background-clip: text;
+         -webkit-background-clip: text;
+         color: transparent;
+         animation: HoverGradient 2s linear 1 normal forwards;
       }
    }
 
@@ -145,7 +180,7 @@ main {
       object-fit: cover;
 
       @media (max-width: $media3 + px) {
-         top: 50%;
+         top: 60%;
          left: 50%;
       }
    }
@@ -158,6 +193,12 @@ main {
 
    &__offer {
       text-align: right;
+      @media (max-width: 850px) {
+         width: 170px;
+      }
+      @media (max-width: $media3 + px) {
+         width: auto;
+      }
    }
 }
 
@@ -176,15 +217,25 @@ main {
 
    a {
       color: #c4c4c4;
+      &:hover {
+         text-decoration: underline;
+      }
    }
    a.active {
       color: #272727;
+      @media (max-width: $media3 + px) {
+         color: #fff;
+      }
    }
 }
 
 .offer {
    & > *:not(:last-child) {
-      margin-bottom: 9px;
+      margin-bottom: 0.5em;
+   }
+
+   &:hover * {
+      text-decoration: underline;
    }
 
    &__name {
@@ -196,6 +247,10 @@ main {
       letter-spacing: 0.05em;
       text-transform: uppercase;
       color: #272727;
+
+      @media (max-width: $media4 + px) {
+         font-size: 14px;
+      }
    }
 
    &_white &__name {
@@ -209,6 +264,10 @@ main {
       font-size: 18px;
       line-height: 1.3;
       color: #757575;
+
+      @media (max-width: $media4 + px) {
+         font-size: 16px;
+      }
    }
 
    &_white &__description {
@@ -223,6 +282,10 @@ main {
       line-height: 1.3;
       letter-spacing: 0.03em;
       color: #e2b67a;
+
+      @media (max-width: $media4 + px) {
+         font-size: 16px;
+      }
    }
 
    &_white &__price {
