--- a/css/styles.css
+++ b/css/styles.css
@@ -119,24 +119,37 @@ select {
 
 .header {
   height: 173px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+@media (max-width: 992.98px) {
+  .header {
+    height: 150px;
+  }
 }
 .header__body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 100%;
 }
 .header__column {
   display: flex;
   align-items: center;
 }
-.header__personal-area {
-  margin-right: 80px;
-}
 .header__burger {
   position: relative;
   width: 30px;
   height: 18px;
+  margin-left: 80px;
   cursor: pointer;
+}
+@media (max-width: 1170px) {
+  .header__burger {
+    margin-left: 50px;
+  }
 }
 .header__burger span {
   top: 8px;
@@ -144,7 +157,7 @@ select {
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: #000;
+  background-color: #fff;
 }
 .header__burger span:first-child {
   top: 0;
@@ -152,6 +165,11 @@ select {
 .header__burger span:last-child {
   top: auto;
   bottom: 0;
+}
+@media (max-width: 767.98px) {
+  .header__burger span {
+    background-color: #000;
+  }
 }
 
 .logo {
@@ -168,6 +186,11 @@ select {
 .personal-area__column:not(:last-child) {
   margin-right: 40px;
 }
+@media (max-width: 1170px) {
+  .personal-area__column:not(:last-child) {
+    margin-right: 30px;
+  }
+}
 .personal-area__item {
   display: flex;
   align-items: center;
@@ -177,10 +200,22 @@ select {
   font-family: "Futura PT";
   font-weight: 300;
   font-size: 18px;
+  color: #fff;
+}
+@media (max-width: 767.98px) {
+  .personal-area__item span {
+    color: #000;
+  }
 }
 .personal-area__icon {
   height: 20px;
   max-width: 22px;
+  fill: #fff;
+}
+@media (max-width: 767.98px) {
+  .personal-area__icon {
+    fill: #000;
+  }
 }
 
 main {
