--- a/css/styles.css
+++ b/css/styles.css
@@ -106,13 +106,15 @@ select {
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 11%;
   width: 100%;
   height: 100%;
 }
+
+.container_padding {
+  padding: 0 11%;
+}
 @media (max-width: 767.98px) {
-  .container {
-    max-width: none;
+  .container_padding {
     padding: 0 5%;
   }
 }
@@ -508,4 +510,104 @@ main {
 }
 .offer_white .offer__price {
   color: #efc58b;
+}
+
+.section-list {
+  display: flex;
+  flex-wrap: wrap;
+  height: auto;
+  padding: 1.3% 0 0.7%;
+  margin: 0 -0.7%;
+}
+.section-list__row {
+  flex: 0 0 100%;
+  display: flex;
+  margin-bottom: 0.7%;
+}
+.section-list__item {
+  margin: 0 0.7%;
+  flex: 0 1 50%;
+}
+
+.section-item {
+  position: relative;
+  max-height: 587px;
+  min-height: 200px;
+  transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.section-item img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.section-item__content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(39, 39, 39, 0.4);
+}
+.section-item__text {
+  position: relative;
+  font-family: "Forum";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+@media (max-width: 1440px) {
+  .section-item__text {
+    font-size: calc(0.0357142857 * 100vw + 12.5714285714px);
+  }
+}
+@media (max-width: 320px) {
+  .section-item__text {
+    font-size: 24px;
+  }
+}
+.section-item__text::before {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  text-align: center;
+  content: "Перейти в раздел";
+  font-family: "Futura PT";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 1.3;
+  color: #ffffff;
+}
+@media (max-width: 1440px) {
+  .section-item__text::before {
+    font-size: calc(0.0089285714 * 100vw + 11.1428571429px);
+  }
+}
+@media (max-width: 320px) {
+  .section-item__text::before {
+    font-size: 14px;
+  }
+}
+.section-item__text::after {
+  position: absolute;
+  bottom: -23px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 40%;
+  height: 2px;
+  background-color: #ffffff;
+  content: "";
+}
+.section-item:hover {
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
+  transform: scale(1.006, 1.006);
 }
