--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,7 +3,7 @@
    position: absolute;
    top: 0;
    left: 0;
-   z-index: ;
+   z-index: 10;
    width: 100%;
 
    @media (max-width: $media2 + px) {
