--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -275,7 +275,8 @@ main {
    }
 
    &_white &__description {
-      color: #c2c2c2;
+      color: #E7E7E7;
+      ;
    }
 
    &__price {
@@ -395,3 +396,77 @@ main {
       transform: scale(1.006, 1.006);
    }
 }
+
+
+
+.offers {
+
+   &__body {
+      display: grid;
+      grid-template-columns: 30% 1fr 30%;
+      grid-template-rows: 400px 400px;
+      grid-gap: 1.4%;
+
+      @media (max-width: $media3 + px) {
+         grid-template-columns: 1fr 1fr;
+         grid-template-rows: repeat(3, 300px);
+      }
+   }
+
+   &__card {
+   }
+}
+
+
+.card {
+   position: relative;
+   display: flex;
+   flex-direction: column;
+   height: 100%;
+   background: #EDEDED;
+   
+   &_full {
+      grid-column: 2 / 3;
+      grid-row: 1 / 3;
+
+      .card__img {
+         flex: 0 0 100%;
+
+         img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+         }
+      }
+   }
+
+   &_general {
+      padding: 20px 30px;
+      .card__img {
+         flex: 0 0 70%;
+      }
+   }
+
+   &__img {
+      position: relative;
+
+      img {
+         max-height: 100%;
+         position: absolute;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%, -50%);
+      }
+      
+   }
+
+   &__offer {
+      position: absolute;
+      bottom: 20px;
+      left: 30px;
+   }
+}
+
+
+
+
