--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -395,3 +395,162 @@ main {
       transform: scale(1.006, 1.006);
    }
 }
+
+.location {
+   background-color: #272727;
+   height: 604px;
+   position: relative;
+
+   @media (max-width: $media2 + px) {
+      height: 400px;
+   }
+
+   @media (max-width: $media3 + px) {
+      height: 500px;
+   }
+
+   &__content {
+      height: 100%;
+      display: flex;
+      align-items: center;
+
+      @media (max-width: $media3 + px) {
+         flex-direction: column;
+         align-items: flex-start;
+      }
+   }
+
+   &__search {
+      flex: 0 0 50%;
+      padding-right: 10%;
+
+      @media (max-width: $media3 + px) {
+         padding-right: 0;
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+      }
+   }
+
+   &__title {
+      width: 100%;
+      margin-bottom: 4%;
+      font-family: "Forum";
+      font-style: normal;
+      font-weight: 400;
+      @include adaptiv-font(48, 20);
+      line-height: 1.1;
+      letter-spacing: 0.03em;
+      color: #ffffff;
+   }
+
+   &__subtitle {
+      margin-bottom: 16%;
+      font-family: "Futura PT";
+      font-style: normal;
+      font-weight: 300;
+      @include adaptiv-font(18, 14);
+      line-height: 1.3;
+      color: #ffffff;
+
+      @media (max-width: $media3 + px) {
+         margin-bottom: 8%;
+      }
+   }
+
+   &__map {
+      position: absolute;
+      top: 0;
+      left: 50%;
+
+      width: 50vw;
+      height: 100%;
+
+      .hint {
+         min-width: 130px;
+         max-width: 170px;
+         display: inline-block;
+         padding: 10px;
+
+         font-family: "Futura PT";
+         font-style: normal;
+         font-weight: 300;
+         font-size: 18px;
+         line-height: 1.3;
+         color: #ffffff;
+
+         background: rgba(103, 103, 103, 0.9);
+         border-radius: 2px;
+      }
+
+      @media (max-width: $media3 + px) {
+         left: 0;
+         top: 50%;
+         width: 100vw;
+         height: 250px;
+      }
+   }
+}
+
+[class*="ymaps-2"][class*="-ground-pane"] {
+   filter: invert(100%) contrast(90%) grayscale(100%);
+   -ms-filter: invert(100%) contrast(90%) grayscale(100%);
+   -webkit-filter: invert(100%) contrast(90%) grayscale(100%);
+   -moz-filter: invert(100%) contrast(90%) grayscale(100%);
+   -o-filter: invert(100%) contrast(90%) grayscale(100%);
+}
+
+.text-field {
+   position: relative;
+
+   &__input {
+      display: block;
+      width: 100%;
+      height: 47px;
+      padding: 10px 45px 10px 0;
+
+      font-family: "Futura PT";
+      font-style: normal;
+      font-weight: 300;
+      font-size: inherit;
+      line-height: 1.3;
+      color: #fff;
+
+      background: transparent;
+      background-clip: padding-box;
+      border: 0;
+      border-bottom: 2px solid #fff;
+
+      &::placeholder {
+         color: rgba(255, 255, 255, 0.4);
+      }
+
+      &:focus {
+         border-color: #e2b67a;
+      }
+   }
+
+   &__btn {
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 47px;
+      background-color: transparent;
+      border: 0;
+      padding: 0;
+      cursor: pointer;
+      transition: right 1s ease;
+
+      &:hover {
+         right: -10px;
+      }
+   }
+
+   &__icon {
+      display: block;
+      transform: scale(-1, 1);
+      width: 28px;
+      height: 100%;
+      fill: #fff;
+   }
+}
