--- a/css/styles.css
+++ b/css/styles.css
@@ -646,7 +646,7 @@ main {
 }
 @media (max-width: 767.98px) {
   .location {
-    height: 500px;
+    height: 600px;
   }
 }
 .location__content {
@@ -666,6 +666,7 @@ main {
 }
 @media (max-width: 767.98px) {
   .location__search {
+    flex: 0 0 40%;
     padding-right: 0;
     display: flex;
     flex-direction: column;
@@ -702,19 +703,9 @@ main {
   line-height: 1.3;
   color: #ffffff;
 }
-@media (max-width: 1440px) {
-  .location__subtitle {
-    font-size: calc(0.0035714286 * 100vw + 12.8571428571px);
-  }
-}
-@media (max-width: 320px) {
-  .location__subtitle {
-    font-size: 14px;
-  }
-}
 @media (max-width: 767.98px) {
   .location__subtitle {
-    margin-bottom: 8%;
+    margin-bottom: 5%;
   }
 }
 .location__map {
@@ -741,9 +732,9 @@ main {
 @media (max-width: 767.98px) {
   .location__map {
     left: 0;
-    top: 50%;
+    top: 40%;
     width: 100vw;
-    height: 250px;
+    height: 60%;
   }
 }
 
@@ -791,9 +782,9 @@ main {
   top: 0;
   right: 0;
   height: 47px;
+  padding: 0 0 0 20px;
   background-color: transparent;
   border: 0;
-  padding: 0;
   cursor: pointer;
   transition: right 1s ease;
 }
