--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -406,7 +406,7 @@ main {
    }
 
    @media (max-width: $media3 + px) {
-      height: 500px;
+      height: 600px;
    }
 
    &__content {
@@ -425,6 +425,7 @@ main {
       padding-right: 10%;
 
       @media (max-width: $media3 + px) {
+         flex: 0 0 40%;
          padding-right: 0;
          display: flex;
          flex-direction: column;
@@ -449,12 +450,12 @@ main {
       font-family: "Futura PT";
       font-style: normal;
       font-weight: 300;
-      @include adaptiv-font(18, 14);
+      font-size: 18px;
       line-height: 1.3;
       color: #ffffff;
 
       @media (max-width: $media3 + px) {
-         margin-bottom: 8%;
+         margin-bottom: 5%;
       }
    }
 
@@ -485,9 +486,9 @@ main {
 
       @media (max-width: $media3 + px) {
          left: 0;
-         top: 50%;
+         top: 40%;
          width: 100vw;
-         height: 250px;
+         height: 60%;
       }
    }
 }
@@ -535,9 +536,9 @@ main {
       top: 0;
       right: 0;
       height: 47px;
+      padding: 0 0 0 20px;
       background-color: transparent;
       border: 0;
-      padding: 0;
       cursor: pointer;
       transition: right 1s ease;
 
