--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -275,8 +275,7 @@ main {
    }
 
    &_white &__description {
-      color: #E7E7E7;
-      ;
+      color: #e7e7e7;
    }
 
    &__price {
@@ -397,19 +396,23 @@ main {
    }
 }
 
-
-
 .offers {
-
    &__body {
       display: grid;
+      //height: 800px;
       grid-template-columns: 30% 1fr 30%;
-      grid-template-rows: 400px 400px;
+      grid-template-rows: 1fr 1fr;
       grid-gap: 1.4%;
 
       @media (max-width: $media3 + px) {
          grid-template-columns: 1fr 1fr;
-         grid-template-rows: repeat(3, 300px);
+         grid-template-rows: repeat(3, 1fr);
+      }
+
+      @media (max-width: $media4 + px) {
+         //height: 1400px;
+         grid-template-columns: 1fr;
+         grid-template-rows: 1fr 1fr 1.5fr 1fr 1fr;
       }
    }
 
@@ -417,33 +420,56 @@ main {
    }
 }
 
-
 .card {
-   position: relative;
-   display: flex;
-   flex-direction: column;
+   //position: relative;
+
    height: 100%;
-   background: #EDEDED;
-   
+   background: #ededed;
+
    &_full {
+      position: relative;
       grid-column: 2 / 3;
       grid-row: 1 / 3;
 
+      @media (max-width: $media4 + px) {
+         order: 3;
+         grid-column: 1 / 2;
+         grid-row: 3 / 4;
+      }
+
       .card__img {
-         flex: 0 0 100%;
+         height: 100%;
+         width: 100%;
 
          img {
             height: 100%;
             width: 100%;
             object-fit: cover;
+            object-position: bottom;
          }
+      }
+
+      .card__offer {
+         position: absolute;
+         bottom: 0;
+         left: 0;
+         z-index: 10;
+         width: 100%;
+         padding: 5% 7%;
       }
    }
 
    &_general {
-      padding: 20px 30px;
+      padding: 5% 7%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       .card__img {
-         flex: 0 0 70%;
+         height: 200px;
+         margin-bottom: 8%;
+         @media (max-width: $media4 + px) {
+            height: 120px;
+         }
       }
    }
 
@@ -457,16 +483,11 @@ main {
          left: 50%;
          transform: translate(-50%, -50%);
       }
-      
    }
 
    &__offer {
-      position: absolute;
-      bottom: 20px;
-      left: 30px;
+      //position: absolute;
+      //bottom: 20px;
+      //left: 30px;
    }
 }
-
-
-
-
