--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -391,7 +391,9 @@ main {
    transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
 
    &:hover {
-      box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
+      box-shadow:
+         0 8px 17px 0 rgba(0, 0, 0, 0.6),
+         0 6px 20px 0 rgba(0, 0, 0, 0.4);
       transform: scale(1.006, 1.006);
    }
 }
@@ -399,43 +401,48 @@ main {
 .offers {
    &__body {
       display: grid;
-      //height: 800px;
       grid-template-columns: 30% 1fr 30%;
       grid-template-rows: 1fr 1fr;
-      grid-gap: 1.4%;
+      grid-template-areas:
+         "general-1 full general-2"
+         "general-3 full general-4";
+
+      grid-gap: 1.3vw;
 
       @media (max-width: $media3 + px) {
          grid-template-columns: 1fr 1fr;
          grid-template-rows: repeat(3, 1fr);
+         grid-template-areas:
+            "general-1 full"
+            "general-2 full"
+            "general-3 general-4";
       }
 
       @media (max-width: $media4 + px) {
-         //height: 1400px;
          grid-template-columns: 1fr;
          grid-template-rows: 1fr 1fr 1.5fr 1fr 1fr;
+         grid-template-areas:
+            "general-1"
+            "general-2"
+            "full"
+            "general-3"
+            "general-4";
       }
-   }
-
-   &__card {
    }
 }
 
 .card {
-   //position: relative;
-
+   cursor: pointer;
    height: 100%;
    background: #ededed;
 
+   &:hover &__offer *{
+      text-decoration: underline;
+   }
+
    &_full {
       position: relative;
-      grid-column: 2 / 3;
-      grid-row: 1 / 3;
-
-      @media (max-width: $media4 + px) {
-         order: 3;
-         grid-column: 1 / 2;
-         grid-row: 3 / 4;
-      }
+      grid-area: full;
 
       .card__img {
          height: 100%;
@@ -460,14 +467,23 @@ main {
    }
 
    &_general {
-      padding: 5% 7%;
+      padding: 8% 7% 5%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+
+      @media (max-width: $media4 + px) {
+         padding: 7% 10% 4%;
+      }
+
       .card__img {
          height: 200px;
-         margin-bottom: 8%;
+         margin: 0 5% 8%;
+         @media (max-width: $media3 + px) {
+            height: 160px;
+         }
          @media (max-width: $media4 + px) {
+            margin: 0 0 6%;
             height: 120px;
          }
       }
@@ -483,11 +499,5 @@ main {
          left: 50%;
          transform: translate(-50%, -50%);
       }
-   }
-
-   &__offer {
-      //position: absolute;
-      //bottom: 20px;
-      //left: 30px;
    }
 }
